crates/aranya-policy-compiler/tests/data/actions/call_without_keyword_invalid_statement.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid statement
  |
2 | action foo() {
3 |     bar()
  |     ^^^^^ statement doesn't make sense in action context
4 | }
  |
